app/assets/stylesheets/body.css.scss
html, body {
  font-family: "proxima-nova", Helvetica Neue, Helvetica, Arial, Sans-serif;
  margin: 0;
  text-align: center;
  font-weight: 200;
  height: 100%;
  color: white;
  letter-spacing: 1px;
}

h1, h2 {
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 4px;
}

h1 {
  font-size: 35px;
}

h2 {
  font-size: 25px;
}

a {
  text-decoration: none;
  color: inherit;
  &:visited {
    color: inherit;
  }
}

li {
  list-style: none;
}

.clear {
  clear: both;
}

.single-wide {
  width: 50%;
  @media(max-width: 600px) {
    width: 100%;
  }
  &.left {
    float: left
  }
  &.right {
    float: right
  }
}

#page-wrap {
  width: 100%;
  height: 100%;
  position: fixed;
  transition: all .5s;
  &.nav-active {
    transform: translate3d(300px,0,0);
  }
}

#page-layout, #page-region {
  height: 100%;
  width: 100%;
}

#page-region {
  position: fixed;
}

#page-layout[data-page='contact'], #page-layout[data-page='about'] {
  #page-region {
    overflow: auto;
  }
}

#page-content, .content {
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  overflow: auto;
}

.page {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
}

.container {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0; bottom: 0;
}

#nav-menu {
  width: 300px;
  height: 100%;
  transform: translate3d(-300px,0,0);
  transition: all .5s;
  z-index: 1000;
  position: fixed;
  background: #18242A;
  text-transform: uppercase;
  .hide-menu {
    font-size: 30px;
    line-height: 30px;
    margin: 0 10px;
    float: right;
    font-weight: 100;
    color: #aaa;
  }
  .links {
    margin: 0;
    padding: 0;
    li {
      a {
        padding: 40px;
        display: block;
        &:hover {
          background: #111A20;
        }
      }
    }
    li:nth-child(1) {
      background: #18242A;
    }
    li:nth-child(2) {
      background: #172227;
    }
    li:nth-child(3) {
      background: #162024;
    }
    li:nth-child(4) {
      background: #151E22;
    }
  }
  .social-media-links {
    padding: 0;
    margin: 0;
    position: absolute;
    bottom: 20px; left: 0; right: 0;
    li {
      width: 33%;
      float: left;
      a {
        height: 30px;
        display: block;
        margin: auto;
      }
      &:nth-child(1) a {
        width: 15px;
        background-image: image-url('facebook.svg');
        &:hover {
          background-image: image-url('facebook-white.svg');
        }
      }
      &:nth-child(2) a {
        width: 37px;
        background-image: image-url('twitter.svg');
        &:hover {
          background-image: image-url('twitter-white.svg');
        }
      }
      &:nth-child(3) a {
        width: 18px;
        background-image: image-url('tumblr.svg');
        &:hover {
          background-image: image-url('tumblr-white.svg');
        }
      }
    }
  }
}

header {
  position: fixed;
  color: black;
  z-index: 999;
  background: rgba(255,255,255,0.2);
  width: 100%;
  height: 50px;
  .menu {
    width: 30px;
    height: 17px;
    background-image: image-url('menu-white.svg');
    margin: 16.5px;
    float: left;
    &.dark {
      background-image: image-url('menu.svg');
    }
  }
  .logo {
    width: 30px;
    margin: auto;
    display: block;
    position: relative;
    top: 12px;
  }
  .logo-icon {
    background-image: image-url('logo-white.svg');
    width: 30px;
    height: 23px;
  }
}

footer {
  background: #111A20;
  padding-top: 75px;
  padding-bottom: 20px;
  .logo {
    background-image: image-url('logo-white.svg');
    width: 56px;
    height: 43px;
    margin: auto;
  }
  .legal {
    margin-top: 50px;
    font-size: 10px;
    color: #394144;
  }
}

#about-page, #contact-page {
  color: black;
  h1 {
    font-size: 20px;
  }
  p {
    color: #666;
    line-height: 22px;
    margin: 40px 20%;
    &.small {
      font-size: 12px;
      color: #999;
      line-height: 18px;
    }
  }
  .image {
    background-size: cover;
    background-position: center center;
    width: 80%;
    padding: 20% 0;
    margin: auto;
  }
}

#about-page {
  .image {
    background-image: image-url('about-cover.jpg');
  }
  a {
    background: #57b5ea;
    height: 20px;
    margin: 40px auto 80px auto;
    display: block;
    color: white;
    padding: 15px;
    width: 160px;
    text-transform: uppercase;
  }
}

#contact-page {
  .image {
    background-image: image-url('contact-cover.jpg');
  }
  p:not(.small) {
    text-transform: uppercase;
  }
  img {
    margin-top: 60px;
  }
}

.category-page, .project-page {
  height: 100%;
  width: 100%;
  transition: all .75s;
  position: absolute;
  top: 0; bottom: 0;
  .category-content, .project-content {
    width: 100%;
    height: 100%;
    overflow: auto;
  }
  .landing-page {
    width: 100%;
    height: 100%;
    display: table;
    position: relative;
    background-size: cover;
    background-position: center center;
  }
  .landing-wrap {
    display: table-cell;
    vertical-align: middle;
  }
  .header-icon {
    margin: auto;
    margin-bottom: 40px;
  }
  .nav-left, .nav-right {
    top: 50%;
    margin-top: -20px;
  }
  .nav-left .icon, .nav-right .icon {
    width: 9px;
    height: 30px;
    display: inline-block;
  }
  .nav-left {
    left: 10px;
    .icon {
      background-image: image-url('left-arrow-white.svg');
    }
    .text {
      margin-left: 10px;
    }
  }
  .nav-right {
    right: 10px;
    .icon {
      background-image: image-url('right-arrow-white.svg');
    }
    .text {
      margin-right: 10px;
      text-align: right;
    }
  }
  .nav-down {
    bottom: 20px;
    width: 100%;
    .text {
      margin-bottom: 5px;
    }
    .icon {
      width: 30px;
      height: 9px;
      background-image: image-url('down-arrow-white.svg');
      margin: auto;
    }
  }
  .category-page, .project-page {
    position: absolute;
    &:first-child {
      left: -100%;
    }
    &:last-child {
      right: -100%;
    }
  }
  .content-left {
    transform: translate3d(-100%, 0, 0);
  }
  .content-left {
    transform: translate3d(100%, 0, 0);
  }
  .nav-left, .nav-right, .nav-down {
    position: absolute;
    .text {
      display: inline-block;
      color: #aaa;
      text-transform: uppercase;
      font-size: 12px;
      line-height: 18px;
      transition: color .5s;
    }
    &:hover {
      cursor: pointer;
      .text {
        color: white;
      }
    }
  }
  .quote {
    padding: 60px 30%;
    background: #1A2329;
    position: relative;
    color: #707C7C;
    .quote-text {
      margin-bottom: 24px;
      text-align: left;
    }
    .quote-author {
      text-align: right;
      text-transform: uppercase;
      letter-spacing: 2px;
    }
  }
}

